--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,172 +1,145 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background-color: rgba(0, 0, 0, .3);
-}
-
-.google-button {
-    margin: 10px;
-    height: 40px;
-    border-width: 0;
-    background: white;
-    color: #737373;
-    border-radius: 5px;
-    white-space: nowrap;
-    box-shadow: 1px 1px 0px 1px rgba(0, 0, 0, 0.05);
-    transition-property: background-color, box-shadow;
-    transition-duration: 150ms;
-    transition-timing-function: ease-in-out;
-    padding: 0;
-    &:focus,
-    &:hover {
-        box-shadow: 1px 4px 5px 1px rgba(0, 0, 0, 0.1);
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
     }
-    &:active {
-        background-color: #e5e5e5;
-        box-shadow: none;
-        transition-duration: 10ms;
+    
+    body {
+        background-color: rgba(0, 0, 0, .3);
     }
-}
-
-.google-button__icon {
-    display: inline-block;
-    vertical-align: middle;
-    margin: 8px 0 8px 8px;
-    width: 18px;
-    height: 18px;
-    box-sizing: border-box;
-}
-
-.google-button__text {
-    display: inline-block;
-    vertical-align: middle;
-    padding: 0 24px;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.container {
-    position: relative;
-    width: 40vw;
-    margin: 30px auto;
-    box-shadow: 0 0 15px black;
-    opacity: 0
-}
-
-.visible {
-    opacity: 1;
-}
-
-.slides-section {
-    width: 100%;
-    display: flex;
-}
-
-.mySlides {
-    width: 100%;
-    height: 100%;
-    display: none;
-    opacity: 0;
-}
-
-@keyframes fadeIn {
-    from {
+    
+    .google-button {
+        margin: 10px;
+        height: 40px;
+        border-width: 0;
+        background: white;
+        color: #737373;
+        border-radius: 5px;
+        white-space: nowrap;
+        box-shadow: 1px 1px 0px 1px rgba(0, 0, 0, 0.05);
+        transition-property: background-color, box-shadow;
+        transition-duration: 150ms;
+        transition-timing-function: ease-in-out;
+        padding: 0;
+        &:focus,
+        &:hover {
+            box-shadow: 1px 4px 5px 1px rgba(0, 0, 0, 0.1);
+        }
+        &:active {
+            background-color: #e5e5e5;
+            box-shadow: none;
+            transition-duration: 10ms;
+        }
+    }
+    
+    .google-button__icon {
+        display: inline-block;
+        vertical-align: middle;
+        margin: 8px 0 8px 8px;
+        width: 18px;
+        height: 18px;
+        box-sizing: border-box;
+    }
+    
+    .google-button__text {
+        display: inline-block;
+        vertical-align: middle;
+        padding: 0 24px;
+        font-size: 14px;
+        font-weight: bold;
+    }
+    
+    .btn {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: transparent;
+        border: none;
+        &--prev {
+            left: 0;
+        }
+        &--next {
+            right: 0;
+        }
+        &__icon {
+            font-size: 50px;
+            font-weight: 800;
+            color: white;
+        }
+        &:hover {
+            background-color: #6868687b;
+        }
+    }
+    
+    .container {
+        position: relative;
+        width: 40vw;
+        margin: 30px auto;
+        box-shadow: 0 0 15px black;
         opacity: 0
     }
-    to {
-        opacity: 1
+    
+    .visible {
+        opacity: 1;
     }
-}
-
-.show {
-    display: flex;
-    opacity: 1;
-    animation: fadeIn .2s linear;
-}
-
-.mySlides img {
-    width: 100%;
-    padding: 0;
-}
-
-.cursor {
-    cursor: pointer;
-}
-
-@keyframes fadeOut {
-    from {
-        opacity: 1
+    
+    .slides-section {
+        width: 100%;
+        height: 500px;
+        overflow: hidden;
+        &__container {
+            width: 100%;
+            height: 100%;
+            display: flex;
+        }
     }
-    to {
-        opacity: 0
+    
+    @keyframes fadeIn {
+        from {
+            opacity: 0
+        }
+        to {
+            opacity: 1
+        }
     }
-}
-
-.caption-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #222;
-    padding: 2px 0 0 0;
-    color: white;
-}
-
-.prev,
-.next {
-    cursor: pointer;
-    width: auto;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
-    transition: .3s all;
-}
-
-.next {
-    border-radius: 10px 0 0 10px;
-}
-
-.prev {
-    border-radius: 0 10px 10px 0;
-}
-
-.prev:hover,
-.next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-.row {
-    display: flex;
-    background-color: black;
-}
-
-.thumbnail {
-    display: flex;
-}
-
-.thumbnail img {
-    width: 100%;
-    margin: 0;
-}
-
-.demo {
-    opacity: 0.6;
-    transition: .5s;
-}
-
-.demo:hover {
-    opacity: 1;
-}
-
-.active {
-    opacity: 1;
-    transform: scale(.8);
-    transition: .3s;
-}
+    
+    .slideImg {
+        width: 100%;
+        height: 100%;
+    }
+    
+    @keyframes fadeOut {
+        from {
+            opacity: 1
+        }
+        to {
+            opacity: 0
+        }
+    }
+    
+    .thumbnail-section {
+        display: flex;
+        background-color: black;
+        position: relative;
+    }
+    
+    .thumbnail {
+        flex: 1;
+        display: flex;
+    }
+    
+    .thumbnailImg {
+        width: 100%;
+        cursor: pointer;
+        opacity: 0.6;
+        transition: .5s;
+        &:hover {
+            opacity: 1;
+        }
+    }
+    
+    .active {
+        opacity: 1;
+        transform: scale(.8);
+        transition: .3s;
+    }
