--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,152 +1,170 @@
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    
-    body {
-        background-color: rgba(0, 0, 0, .3);
-    }
-    
-    .google-button {
-        margin: 10px;
-        height: 40px;
-        border-width: 0;
-        background: white;
-        color: #737373;
-        border-radius: 5px;
-        white-space: nowrap;
-        box-shadow: 1px 1px 0px 1px rgba(0, 0, 0, 0.05);
-        transition-property: background-color, box-shadow;
-        transition-duration: 150ms;
-        transition-timing-function: ease-in-out;
-        padding: 0;
-        &:focus,
-        &:hover {
-            box-shadow: 1px 4px 5px 1px rgba(0, 0, 0, 0.1);
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
-        &:active {
-            background-color: #e5e5e5;
-            box-shadow: none;
-            transition-duration: 10ms;
-        }
-    }
-    
-    .google-button__icon {
-        display: inline-block;
-        vertical-align: middle;
-        margin: 8px 0 8px 8px;
-        width: 18px;
-        height: 18px;
-        box-sizing: border-box;
-    }
-    
-    .google-button__text {
-        display: inline-block;
-        vertical-align: middle;
-        padding: 0 24px;
-        font-size: 14px;
-        font-weight: bold;
-    }
-    
-    .btn {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: transparent;
-        border: none;
-        &--prev {
-            left: 0;
-        }
-        &--next {
-            right: 0;
-        }
-        &__icon {
-            font-size: 50px;
-            font-weight: 800;
-            color: white;
-        }
-        &:hover {
-            background-color: #6868687b;
-        }
-    }
-    
-    .container {
-        position: relative;
-        width: 40vw;
-        margin: 30px auto;
-        box-shadow: 0 0 15px black;
-        opacity: 0
-    }
-    
-    .visible {
-        opacity: 1;
-    }
-    
-    .slides-section {
-        width: 100%;
-        height: 500px;
-        overflow: hidden;
-        &__container {
+        
+        body {
+            background-color: #f0f3f5;
+            display: flex;
+            flex-direction: column;
             width: 100%;
-            height: 100%;
+            height: 100vh;
+            font-family: 'Lato', sans-serif;
+        }
+        
+        .header {
+            margin: 50px auto;
+            &__title {}
+        }
+        
+        .search {
+            margin: 50px auto;
+            &__input {
+                display: flex;
+                justify-content: space-between;
+            }
+            &__description,
+            &__number {
+                width: 45%;
+                padding: 20px;
+                height: 30px;
+                border-radius: 10px;
+                font-size: 20px;
+                border: solid 3px orange;
+                color: slategrey;
+                text-align: center;
+            }
+            input::placeholder {
+                font-size: 15px;
+            }
+            &__btn {
+                margin: 30px 0 0 auto;
+                padding: 10px 20px;
+                border-radius: 40px;
+                font-size: 20px;
+                color: rgb(255, 153, 0);
+                transition: transform .1s ease-in;
+                border: 2px solid rgb(145, 145, 145);
+                &:hover {
+                    transform: translateY(-1%)
+                }
+                &:active {
+                    transform: translateY(1%);
+                }
+            }
+        }
+        
+        .btn {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: transparent;
+            border: none;
+            &--prev {
+                left: 0;
+            }
+            &--next {
+                right: 0;
+            }
+            &__icon {
+                font-size: 50px;
+                font-weight: 800;
+                color: white;
+            }
+            &:hover {
+                background-color: #6868687b;
+            }
+        }
+        
+        .container {
             position: relative;
-        }
-    }
-    
-    @keyframes fadeIn {
-        from {
+            width: 40vw;
+            margin: 30px auto;
+            box-shadow: 0 0 15px black;
             opacity: 0
         }
-        to {
-            opacity: 1
-        }
-    }
-    
-    .slideImg {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        transition: opacity 0.4s ease-in-out;
-    }
-    
-    .slideImg.visible {
-        opacity: 1;
-    }
-    
-    @keyframes fadeOut {
-        from {
-            opacity: 1
-        }
-        to {
-            opacity: 0
-        }
-    }
-    
-    .thumbnail-section {
-        display: flex;
-        background-color: black;
-        position: relative;
-    }
-    
-    .thumbnail {
-        flex: 1;
-        display: flex;
-    }
-    
-    .thumbnailImg {
-        width: 100%;
-        cursor: pointer;
-        opacity: 0.6;
-        transition: .5s;
-        &:hover {
+        
+        .visible {
             opacity: 1;
         }
-    }
-    
-    .active {
-        opacity: 1;
-        transform: scale(.8);
-        transition: .3s;
-    }
+        
+        .slides-section {
+            width: 100%;
+            height: 500px;
+            overflow: hidden;
+            &__container {
+                width: 100%;
+                height: 100%;
+                position: relative;
+            }
+        }
+        
+        @keyframes fadeIn {
+            from {
+                opacity: 0
+            }
+            to {
+                opacity: 1
+            }
+        }
+        
+        .slideImg {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            object-fit: cover;
+            transition: opacity 0.4s ease-in-out;
+        }
+        
+        .slideImg.visible {
+            opacity: 1;
+        }
+        
+        @keyframes fadeOut {
+            from {
+                opacity: 1
+            }
+            to {
+                opacity: 0
+            }
+        }
+        
+        .thumbnail-section {
+            width: 100%;
+            display: block;
+            overflow: scroll;
+            scroll-behavior: smooth;
+            background-color: black;
+            padding: 5px;
+            &__container {
+                display: flex;
+                overflow-x: auto;
+            }
+        }
+        
+        .thumbnail {
+            flex: 0 0 auto;
+            width: 100px;
+            height: 100px;
+            display: flex;
+        }
+        
+        .thumbnailImg {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            cursor: pointer;
+            opacity: 0.6;
+            transition: .5s;
+            &:hover {
+                opacity: 1;
+            }
+        }
+        
+        .active {
+            opacity: 1;
+            transform: scale(.8);
+            transition: .3s;
+        }
